almost done witb the main home page, just the navbar link that's left

--- a/index-2.html
+++ b/index-2.html
@@ -30,43 +30,37 @@
 
         <section id="ni">
 
-          <nav class="navbar navbar-expand-lg bg-body-primary">
-            <div class="navbar-main container-fluid">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
               <a class="navbar-brand" href="#">Library</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="">ARTS</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">AGRICULTURE</a>
+                    <a class="nav-link" href="maths.html">Mathematics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">BASIC MEDICAL SCIENCE</a>
+                    <a class="nav-link" href="eng.html">English</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">DENTISTRY</a>
+                    <a class="nav-link" href="chm.html">Chemistry</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">EDUCATION</a>
+                    <a class="nav-link" href="phy.html">Physics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">ENGINEERING</a>
+                    <a class="nav-link" href="bio.html">Biology</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">LAW</a>
+                    <a class="nav-link" href="gst.html">General Studies</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">LIFE SCIENCE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">VETERINARY SCIENCE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">PHARMACY</a>
+                    <a class="nav-link" href="comp.html">Computer</a>
                   </li>
                 </ul>
                 <!-- <form class="d-flex" role="search">
@@ -218,23 +212,15 @@
         </section>
 
         <section id="yon">
-          <h1 class="cntr">Select Your Faculty</h1>
 
-          
-
-          <div class="course-btn d-grid gap-2 col-6 mx-auto">
-
-            
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">ARTS</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">AGRICULTURE</a>
-            <a type="button" href="index-2.html" class="btn-main1 btn btn-lg btn-outline-success">BASIC MEDICAL SCIENCE</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">DENTISTRY</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">EDUCATION</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">ENGINEERING</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">LAW</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">LIFE SCIENCE</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">VETERINARY SCIENCE</a>
-            <a type="button" href="" class="btn-main1 btn btn-lg btn-outline-success">PHARMACY</a>
+          <div class="course-btn">
+            <a type="button" href="maths.html" class="btn btn-lg btn-outline-success">Mathematics</a>
+            <a type="button" href="eng.html" class="btn btn-lg btn-outline-success">English</a>
+            <a type="button" href="chm.html" class="btn btn-lg btn-outline-success">Chemistry</a>
+            <a type="button" href="phy.html" class="btn btn-lg btn-outline-success">Physics</a>
+            <a type="button" href="bio.html" class="btn btn-lg btn-outline-success">Biology</a>
+            <a type="button" href="gst.html" class="btn btn-lg btn-outline-success">General Studies</a>
+            <a type="button" href="comp.html" class="btn btn-lg btn-outline-success">Computer</a>
           </div>
 
 
@@ -247,7 +233,7 @@
 
                 <div class="container"> 
                   <footer class="py-3 my-4"> 
-                    <!-- <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
+                    <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
                       <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">
                         <i class="fa-solid fa-house-chimney"></i>
                         Home</a></li> 
@@ -258,8 +244,7 @@
                       <li class="nav-item"><a href="bio.html" class="nav-link px-2 text-body-secondary">Biology</a></li> 
                       <li class="nav-item"><a href="gst.html" class="nav-link px-2 text-body-secondary">General Studies</a></li> 
                       <li class="nav-item"><a href="comp.html" class="nav-link px-2 text-body-secondary">Computer</a></li> 
-                    </ul>  -->
-                    <hr>
+                    </ul> 
                     <div class="social">
                       <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
                       <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://wa.me/2348112738759"><i class="fa-brands fa-lg fa-whatsapp"></i></a>
