done with phase one

--- a/gst.html
+++ b/gst.html
@@ -25,74 +25,50 @@
     <body>
 
 
-        <section id="ichi">
+      <section id="ni">
 
-            <div class="navigation-bar">
-                <!-- <button class="btn side-btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">---</button> -->
-                <h1>BMS ACHIEVE</h1>
-            </div>
-
-        </section>
-
-        <section id="ni">
-
-          <nav class="navbar navbar-expand-sm bg">
-            <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">BMS ACHIEVE</a> -->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="navbar-main container-fluid">
+            <a class="navbar-brand" href="#">Toshokan</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">
-                    <i class="fa-solid fa-house-chimney"></i>
-                    HOME</a>
-                </li></ul>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="maths.html">Mathematics</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eng.html">English</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="chm.html">Chemistry</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="phy.html">Physics</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="bio.html">Biology</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="gst.html">General Studies</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="comp.html">Computer</a>
-                  </li>
-                  <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li> -->
-                </ul>
-                <!-- <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
-              </div>
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="maths.html">Mathematics</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="eng.html">English</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="chm.html">Chemistry</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="phy.html">Physics</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="bio.html">Biology</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="gst.html">General Studies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="comp.html">Computer</a>
+                </li>
+              </ul>
+              <!-- <form class="d-flex" role="search">
+                <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form> -->
             </div>
-          </nav>
+          </div>
+        </nav>
 
-
-        </section>  
+      </section>  
 
 
         <section id="san">
@@ -108,7 +84,7 @@
         <section id="ni">
           <div class="mother">
             <div class="row parent" >
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">CamScanner 03-05-2025 13.54</h4>
@@ -116,7 +92,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">Copy of Gst112</h4>
@@ -124,7 +100,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">FREE GST MATERIAL</h4>
@@ -132,7 +108,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">GST 201  NIGERIAN PEOPLES AND CULTURE</h4>
@@ -140,7 +116,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">GST-NPC</h4>
@@ -148,7 +124,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">GST102-REV</h4>
@@ -156,7 +132,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">Nigerian People and Culture-1</h4>
@@ -164,7 +140,7 @@
                     </div>
                   </div>
                 </div>
-                <!-- <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <!-- <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title"></h4>
@@ -193,7 +169,7 @@
         <section id="ni">
           <div class="mother">
             <div class="row parent" >
-                <!-- <div class="col-lg-2 col-md-3 col-sm-2 pdf">
+                <!-- <div class="col-lg-4 col-md-3 col-sm-4 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title"></h4>
@@ -215,23 +191,23 @@
             <div class="container"> 
               <footer class="py-3 my-4"> 
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
-                  <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">
+                  <li class="nav-item"><a href="index.html" class="nav-link px-4 text-body-secondary">
                     <i class="fa-solid fa-house-chimney"></i>
                     Home</a></li> 
-                  <li class="nav-item"><a href="maths.html" class="nav-link px-2 text-body-secondary">Mathematics</a></li> 
-                  <li class="nav-item"><a href="eng.html" class="nav-link px-2 text-body-secondary">English</a></li> 
-                  <li class="nav-item"><a href="chm.html" class="nav-link px-2 text-body-secondary">Chemistry</a></li> 
-                  <li class="nav-item"><a href="phy.html" class="nav-link px-2 text-body-secondary">Physics</a></li> 
-                  <li class="nav-item"><a href="bio.html" class="nav-link px-2 text-body-secondary">Biology</a></li> 
-                  <li class="nav-item"><a href="gst.html" class="nav-link px-2 text-body-secondary">General Studies</a></li> 
-                  <li class="nav-item"><a href="comp.html" class="nav-link px-2 text-body-secondary">Computer</a></li> 
+                  <li class="nav-item"><a href="maths.html" class="nav-link px-4 text-body-secondary">Mathematics</a></li> 
+                  <li class="nav-item"><a href="eng.html" class="nav-link px-4 text-body-secondary">English</a></li> 
+                  <li class="nav-item"><a href="chm.html" class="nav-link px-4 text-body-secondary">Chemistry</a></li> 
+                  <li class="nav-item"><a href="phy.html" class="nav-link px-4 text-body-secondary">Physics</a></li> 
+                  <li class="nav-item"><a href="bio.html" class="nav-link px-4 text-body-secondary">Biology</a></li> 
+                  <li class="nav-item"><a href="gst.html" class="nav-link px-4 text-body-secondary">General Studies</a></li> 
+                  <li class="nav-item"><a href="comp.html" class="nav-link px-4 text-body-secondary">Computer</a></li> 
                 </ul> 
                 <div class="social">
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://wa.me/2348112738759"><i class="fa-brands fa-lg fa-whatsapp"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.instagram.com/gift_oghale4?igsh=c3huMDhob3l4MmJr"><i class="fa-brands fa-lg fa-instagram"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
-                  <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://wa.me/2348112738759"><i class="fa-brands fa-lg fa-whatsapp"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.instagram.com/gift_oghale4?igsh=c3huMDhob3l4MmJr"><i class="fa-brands fa-lg fa-instagram"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
+                  <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
                 </div>
                 <p class="text-center text-body-secondary">© 2025 By Gifted</p> 
               </footer> 
