--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <nav class="navbar navbar-expand-lg bg-body-primary">
             <div class="navbar-main container-fluid">
-              <a class="navbar-brand" href="#">Library</a>
+              <a class="navbar-brand" href="#">Toshokan</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="">AGRICULTURE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">BASIC MEDICAL SCIENCE</a>
+                    <a class="nav-link" href="index-2.html">BASIC MEDICAL SCIENCE</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="">DENTISTRY</a>
@@ -80,7 +80,7 @@
         </section>
 
 
-        <section id="san">
+        <!-- <section id="san">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -212,7 +212,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-            </div>
+            </div> -->
 
 
         </section>
