fixing the styling

--- a/index-2.html
+++ b/index-2.html
@@ -32,15 +32,12 @@
 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="navbar-main container-fluid">
-              <a class="navbar-brand" href="#">Toshokan</a>
+              <a class="navbar-brand" href="index.html">Toshokan</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="maths.html">Mathematics</a>
                   </li>
@@ -63,10 +60,6 @@
                     <a class="nav-link" href="comp.html">Computer</a>
                   </li>
                 </ul>
-                <!-- <form class="d-flex" role="search">
-                  <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search"/>
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
               </div>
             </div>
           </nav>
@@ -233,10 +226,7 @@
 
                 <div class="container"> 
                   <footer class="py-3 my-4"> 
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
-                      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">
-                        <i class="fa-solid fa-house-chimney"></i>
-                        Home</a></li> 
+                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                       <li class="nav-item"><a href="maths.html" class="nav-link px-2 text-body-secondary">Mathematics</a></li> 
                       <li class="nav-item"><a href="eng.html" class="nav-link px-2 text-body-secondary">English</a></li> 
                       <li class="nav-item"><a href="chm.html" class="nav-link px-2 text-body-secondary">Chemistry</a></li> 
