--- a/comp.html
+++ b/comp.html
@@ -29,15 +29,12 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="navbar-main container-fluid">
-            <a class="navbar-brand" href="#">Toshokan</a>
+            <a class="navbar-brand" href="index.html">Toshokan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="maths.html">Mathematics</a>
                 </li>
@@ -60,10 +57,6 @@
                   <a class="nav-link" href="comp.html">Computer</a>
                 </li>
               </ul>
-              <!-- <form class="d-flex" role="search">
-                <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search"/>
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form> -->
             </div>
           </div>
         </nav>
@@ -82,6 +75,17 @@
         </section>
 
         <section id="ni">
+
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          
           <div class="mother">
             <div class="row parent" >
                 <div class="col-lg-4 col-md-12 col-sm-12 pdf">
@@ -92,7 +96,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 download-card col-md-12 col-sm-12 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">CSC past questions 4-1</h4>
@@ -131,22 +135,6 @@
           
         </section>
 
-
-        <section id="ni">
-          <div class="mother">
-            <div class="row parent" >
-                <!-- <div class="col-lg-4 col-md-12 col-sm-12 pdf">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title"></h4>
-                      <a href="" class="btn check-btn btn-primary">Download</a>
-                    </div>
-                  </div>
-                </div> -->
-              </div>
-          </div>
-        </section>
-
         </section>
 
           <footer id="footer">
@@ -156,10 +144,7 @@
 
             <div class="container"> 
               <footer class="py-3 my-4"> 
-                <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
-                  <li class="nav-item"><a href="index.html" class="nav-link px-4 text-body-secondary">
-                    <i class="fa-solid fa-house-chimney"></i>
-                    Home</a></li> 
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                   <li class="nav-item"><a href="maths.html" class="nav-link px-4 text-body-secondary">Mathematics</a></li> 
                   <li class="nav-item"><a href="eng.html" class="nav-link px-4 text-body-secondary">English</a></li> 
                   <li class="nav-item"><a href="chm.html" class="nav-link px-4 text-body-secondary">Chemistry</a></li> 
