fixed the landing page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="index-2.html">BASIC MEDICAL SCIENCE</a>
+                    <a class="nav-link" href="BMS.html">BASIC MEDICAL SCIENCE</a>
                   </li>
                 </ul>
               </div>
