--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           
 
           <div class="course-btn d-grid gap-2 col-6 mx-auto">
-            <a type="button" href="index-2.html" class="btn-main1 btn btn-lg btn-outline-success">BASIC MEDICAL SCIENCE</a>
+            <a type="button" href="BMS.html" class="btn-main1 btn btn-lg btn-outline-success">BASIC MEDICAL SCIENCE</a>
           </div>
 
 
