added the new logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <nav class="navbar navbar-expand-lg bg-body-primary">
             <div class="navbar-main container-fluid">
-              <a class="navbar-brand" href="BMS.html">Toshokan</a>
+              <a class="navbar-brand" href="index.html">Aura</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -73,6 +73,7 @@
                       <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
                       <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
                     </div>
+                    <p class="text-center text-body-secondary">Aura <br> Accessible User Friendly Achieve</p>
                     <p class="text-center text-body-secondary">© 2025 By Gifted</p> 
                   </footer> 
                 </div>
