--- a/phy.html
+++ b/phy.html
@@ -216,6 +216,7 @@
                   <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.linkedin.com/in/gift-oghale-867175371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-lg fa-linkedin-in"></i></a>
                   <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://github.com/oghalegifted"><i class="fa-brands fa-lg fa-github"></i></a>
                 </div>
+                <p class="text-center text-body-secondary">Aura <br> Accessible User Friendly Achieve</p>
                 <p class="text-center text-body-secondary">© 2025 By Gifted</p> 
               </footer> 
             </div>
