added the SLT courses and also maked the display two instead of one

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
               <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="BMS.html">BASIC MEDICAL SCIENCE</a>
+                    <a class="nav-link" href="BMS/BMS.html">BASIC MEDICAL SCIENCE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="SLT/SLT.html">SCIENCE LABORATORY TECNOLOGY</a>
                   </li>
                 </ul>
               </div>
@@ -52,7 +55,8 @@
           
 
           <div class="course-btn d-grid gap-2 col-6 mx-auto">
-            <a type="button" href="BMS.html" class="btn-main1 btn btn-lg btn-outline-success">BASIC MEDICAL SCIENCE</a>
+            <a type="button" href="BMS/BMS.html" class="btn-main1 btn btn-lg btn-outline-success">BASIC MEDICAL SCIENCE</a>
+            <a type="button" href="SLT/SLT.html" class="btn-main1 btn btn-lg btn-outline-success">SCIENCE LABORATORY TECNOLOGY</a>
           </div>
 
 
