--- a/BMS/phy.html
+++ b/BMS/phy.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
          
         <!-- my stylessheet -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="navbar-main container-fluid">
-            <a class="navbar-brand" href="index.html">Aura</a>
+            <a class="navbar-brand" href="/index.html">Aura</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -76,7 +76,7 @@
         <section id="ni">
           <div class="mother">
             <div class="row parent" >
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">Phy 111  examination expo questions</h4>
@@ -84,7 +84,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHY 124 PQ.(2018)</h4>
@@ -92,7 +92,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">physical-quantities-units-and-dimensions1</h4>
@@ -100,7 +100,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHYSICS-LEARNING-MATERIAL</h4>
@@ -108,7 +108,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">total solution in phy 111</h4>
@@ -116,7 +116,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">vector_exam_questions_part_a</h4>
@@ -145,7 +145,7 @@
         <section id="ni">
           <div class="mother">
             <div class="row parent" >
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHY 124 Exercises</h4>
@@ -153,7 +153,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHY 124 SOLUTIONS-1</h4>
@@ -161,7 +161,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHY124 2019 ANSWERS</h4>
@@ -169,7 +169,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">Phy124</h4>
@@ -177,7 +177,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">PHY124 Q&A 2021(5)</h4>
