--- a/SLT/SLT.html
+++ b/SLT/SLT.html
@@ -7,13 +7,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
          
         <!-- my stylessheet -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
+      
 
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/5574928097.js" crossorigin="anonymous"></script>
@@ -32,32 +32,29 @@
 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="navbar-main container-fluid">
-              <a class="navbar-brand" href="index.html">Aura</a>
+              <a class="navbar-brand" href="/index.html">Aura</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="maths.html">Mathematics</a>
+                    <a class="nav-link" href="mth(SLT).html">Mathematics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="eng.html">English</a>
+                    <a class="nav-link" href="eng(SLT).html">English</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="chm.html">Chemistry</a>
+                    <a class="nav-link" href="chm(SLT).html">Chemistry</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="phy.html">Physics</a>
+                    <a class="nav-link" href="phy(SLT).html">Physics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="bio.html">Biology</a>
+                    <a class="nav-link" href="bio(SLT).html">Biology</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="gst.html">General Studies</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="comp.html">Computer</a>
+                    <a class="nav-link" href="gst(SLT).html">General Studies</a>
                   </li>
                 </ul>
               </div>
@@ -207,13 +204,12 @@
         <section id="yon">
 
           <div class="course-btn">
-            <a type="button" href="maths.html" class="btn btn-lg btn-outline-success">Mathematics</a>
-            <a type="button" href="eng.html" class="btn btn-lg btn-outline-success">English</a>
-            <a type="button" href="chm.html" class="btn btn-lg btn-outline-success">Chemistry</a>
-            <a type="button" href="phy.html" class="btn btn-lg btn-outline-success">Physics</a>
-            <a type="button" href="bio.html" class="btn btn-lg btn-outline-success">Biology</a>
-            <a type="button" href="gst.html" class="btn btn-lg btn-outline-success">General Studies</a>
-            <a type="button" href="comp.html" class="btn btn-lg btn-outline-success">Computer</a>
+            <a type="button" href="mth(SLT).html" class="btn btn-lg btn-outline-success">Mathematics</a>
+            <a type="button" href="eng(SLT).html" class="btn btn-lg btn-outline-success">English</a>
+            <a type="button" href="chm(SLT).html" class="btn btn-lg btn-outline-success">Chemistry</a>
+            <a type="button" href="phy(SLT).html" class="btn btn-lg btn-outline-success">Physics</a>
+            <a type="button" href="bio(SLT).html" class="btn btn-lg btn-outline-success">Biology</a>
+            <a type="button" href="gst(SLT).html" class="btn btn-lg btn-outline-success">General Studies</a>
           </div>
 
 
@@ -227,13 +223,12 @@
                 <div class="container"> 
                   <footer class="py-3 my-4"> 
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                      <li class="nav-item"><a href="maths.html" class="nav-link px-2 text-body-secondary">Mathematics</a></li> 
-                      <li class="nav-item"><a href="eng.html" class="nav-link px-2 text-body-secondary">English</a></li> 
-                      <li class="nav-item"><a href="chm.html" class="nav-link px-2 text-body-secondary">Chemistry</a></li> 
-                      <li class="nav-item"><a href="phy.html" class="nav-link px-2 text-body-secondary">Physics</a></li> 
-                      <li class="nav-item"><a href="bio.html" class="nav-link px-2 text-body-secondary">Biology</a></li> 
-                      <li class="nav-item"><a href="gst.html" class="nav-link px-2 text-body-secondary">General Studies</a></li> 
-                      <li class="nav-item"><a href="comp.html" class="nav-link px-2 text-body-secondary">Computer</a></li> 
+                      <li class="nav-item"><a href="mth(SLT).html" class="nav-link px-2 text-body-secondary">Mathematics</a></li> 
+                      <li class="nav-item"><a href="eng(SLT).html" class="nav-link px-2 text-body-secondary">English</a></li> 
+                      <li class="nav-item"><a href="chm(SLT).html" class="nav-link px-2 text-body-secondary">Chemistry</a></li> 
+                      <li class="nav-item"><a href="phy(SLT).html" class="nav-link px-2 text-body-secondary">Physics</a></li> 
+                      <li class="nav-item"><a href="bio(SLT).html" class="nav-link px-2 text-body-secondary">Biology</a></li> 
+                      <li class="nav-item"><a href="gst(SLT).html" class="nav-link px-2 text-body-secondary">General Studies</a></li> 
                     </ul> 
                     <div class="social">
                       <a class="link-secondary link-offset-2 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
