--- a/SLT/gst(SLT).html
+++ b/SLT/gst(SLT).html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
          
         <!-- my stylessheet -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,39 +29,36 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="navbar-main container-fluid">
-            <a class="navbar-brand" href="index.html">Aura</a>
+            <a class="navbar-brand" href="/index.html">Aura</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse main1 navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="maths.html">Mathematics</a>
+                  <a class="nav-link" href="mth(SLT).html">Mathematics</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="eng.html">English</a>
+                  <a class="nav-link" href="eng(SLT).html">English</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chm.html">Chemistry</a>
+                  <a class="nav-link" href="chm(SLT).html">Chemistry</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="phy.html">Physics</a>
+                  <a class="nav-link" href="phy(SLT).html">Physics</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="bio.html">Biology</a>
+                  <a class="nav-link" href="bio(SLT).html">Biology</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="gst.html">General Studies</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="comp.html">Computer</a>
+                  <a class="nav-link" href="gst(SLT).html">General Studies</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
 
-      </section>  
+      </section>
 
 
         <section id="san">
@@ -75,61 +72,39 @@
         </section>
 
         <section id="ni">
+
+
           <div class="mother">
             <div class="row parent" >
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title">CamScanner 03-05-2025 13.54</h4>
-                      <a href="https://drive.google.com/file/d/1IX31KouDHtszNfDQxamkIZGJksgm6cb5/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title">Copy of Gst112</h4>
-                      <a href="https://drive.google.com/file/d/1KbsZieYFkfOg9M7JBsUqZQhZuTrVm4Cc/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title">FREE GST MATERIAL</h4>
-                      <a href="https://drive.google.com/file/d/1KRqcV0l2Eh3wKeDV_ydLCQBcd95hLpXl/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">GST 201  NIGERIAN PEOPLES AND CULTURE</h4>
-                      <a href="https://drive.google.com/file/d/1JRQ0EZzo15utuOdBdcTkI5xmHNA2kR_J/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
+                      <a href="https://drive.google.com/file/d/1dFxFSqlf-q6vU6-tF5yW_3J2qDoU0ta6/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
-                  <div class="card">
-                    <div class="card-body">
-                      <h4 class="card-title">GST-NPC</h4>
-                      <a href="https://drive.google.com/file/d/1JpuRRhNx3V-u5C0UgrIyZlh_VLnw6e76/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 download-card col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
                       <h4 class="card-title">GST102-REV</h4>
-                      <a href="https://drive.google.com/file/d/1JRP29bNYXxopflOYJ3CXLjLpgFzwEn16/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
+                      <a href="https://drive.google.com/file/d/1KUnl9Y5yhoEV335Md5ilCFlrMW_uXUsl/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 pdf">
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
                   <div class="card">
                     <div class="card-body">
-                      <h4 class="card-title">Nigerian People and Culture-1</h4>
-                      <a href="https://drive.google.com/file/d/1K9-DIJtBlZCC-K1Pw2LvQMlDnUSKX2Om/view?usp=drive_link" class="btn check-btn btn-primary">Download</a>
+                      <h4 class="card-title"></h4>
+                      <a href="" class="btn check-btn btn-primary">Download</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 pdf">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4 class="card-title"></h4>
+                      <a href="" class="btn check-btn btn-primary">Download</a>
                     </div>
                   </div>
                 </div>
@@ -147,6 +122,7 @@
 
           
         </section>
+
         </section>
 
           <footer id="footer">
@@ -157,13 +133,12 @@
             <div class="container"> 
               <footer class="py-3 my-4"> 
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                  <li class="nav-item"><a href="maths.html" class="nav-link px-4 text-body-secondary">Mathematics</a></li> 
-                  <li class="nav-item"><a href="eng.html" class="nav-link px-4 text-body-secondary">English</a></li> 
-                  <li class="nav-item"><a href="chm.html" class="nav-link px-4 text-body-secondary">Chemistry</a></li> 
-                  <li class="nav-item"><a href="phy.html" class="nav-link px-4 text-body-secondary">Physics</a></li> 
-                  <li class="nav-item"><a href="bio.html" class="nav-link px-4 text-body-secondary">Biology</a></li> 
-                  <li class="nav-item"><a href="gst.html" class="nav-link px-4 text-body-secondary">General Studies</a></li> 
-                  <li class="nav-item"><a href="comp.html" class="nav-link px-4 text-body-secondary">Computer</a></li> 
+                  <li class="nav-item"><a href="mth(SLT).html" class="nav-link px-4 text-body-secondary">Mathematics</a></li> 
+                  <li class="nav-item"><a href="eng(SLT).html" class="nav-link px-4 text-body-secondary">English</a></li> 
+                  <li class="nav-item"><a href="chm(SLT).html" class="nav-link px-4 text-body-secondary">Chemistry</a></li> 
+                  <li class="nav-item"><a href="phy(SLT).html" class="nav-link px-4 text-body-secondary">Physics</a></li> 
+                  <li class="nav-item"><a href="bio(SLT).html" class="nav-link px-4 text-body-secondary">Biology</a></li> 
+                  <li class="nav-item"><a href="gst(SLT).html" class="nav-link px-4 text-body-secondary">General Studies</a></li>
                 </ul> 
                 <div class="social">
                   <a class="link-secondary link-offset-4 link-underline-opacity-25" href="https://www.facebook.com/share/1HwJsbMYJz/"><i class="fa-brands fa-lg fa-facebook"></i></a>
